kubernetes/task-manager/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask

    spec:
      containers:
        - name: flask
          image: oviyaa2006/devops-task-manager-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
